# learning_capture_pipeline

./: .env.example  .gitignore  AGENTS.md  Makefile  PLANS.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.codex/: config.example.toml
.github/: pull_request_template.md
alembic/: env.py
config/: approved_courses.example.yaml  permission_manifest.example.yaml  runtime_pilot.example.yaml
docs/: 00_project_brief.md  01_architecture.md  02_capture_sop.md  03_governance_policy.md  04_data_model.md  05_tooling_options.md  06_codex_operating_model.md  07_mvp_acceptance_criteria.md  08_risk_register.md  09_seedtalent_permission_record_template.md  10_capture_lab_setup.md  11_autonomous_capture_strategy.md  12_autonomous_state_machine.md  13_autonomous_qa_and_recovery.md  14_autonomous_data_model_addendum.md  15_contract_verified_full_autonomy.md  16_autonomous_implementation_blueprint.md  17_credential_and_auth_design.md  18_quiz_and_assessment_capture_policy.md  19_runbook_first_autonomous_pilot.md  20_live_seedtalent_findings.md  21_agent_truth_map.md
migrations/: 001_initial_capture_schema.sql
prompts/: 00_codex_bootstrap_prompt.md  01_plan_first_prompt.md  03_codex_contract_verified_full_autonomy_prompt.md
scripts/: rehydrate-agent.ps1
tests/: test_artifacts.py  test_auth.py  test_autopilot_state_machine.py  test_capture_plan.py  test_cli.py  test_course_discovery.py  test_diagnostics.py  test_end_to_end_fixture.py  test_fake_seedtalent_fixture.py  test_governance.py  test_media_controller.py  test_migrations.py  test_models.py  test_qa.py  (+12 more)
(+75 files in other folders)
